# hcv-v2x-predictive-risk-mitigation

./: .gitignore  README.md
.cursor/rules/: nano-git-sync.mdc
data/sample-events/: edge-risk-event-v1.json  gps-sample.json
docs/: README.md  current-jetson-poc-status.md  phase-1-poc-scope.md  phase1-extraction-summary.md  refactor-status.md  run-local-phase1.md  runtime-unification-plan.md  service-migration-plan.md
docs/architecture/: architecture-diagram.md
docs/demo/: demo-workflow.md
docs/patent-mapping/: claim-to-poc-mapping.md
jetson-hcv-risk-poc/: .gitignore  PHASE1_POC_ARCHITECTURE.md  README.md
jetson-hcv-risk-poc/cloud/api/: database.py  enrichment.py  main.py  requirements.txt  schemas.py
jetson-hcv-risk-poc/cloud/deploy/: .env.example  docker-compose.yml
jetson-hcv-risk-poc/contracts/: event_v1.json
jetson-hcv-risk-poc/docs/patent-mapping/: claim-phase-matrix.md
jetson-hcv-risk-poc/edge/: requirements.txt
jetson-hcv-risk-poc/edge/app/: __init__.py  (+12 more)
jetson-hcv-risk-poc/samples/: event_v1_example.json
jetson-hcv-risk-poc/scripts/: Copy-JetsonRecordingsToDownloads.ps1  Sync-GitPullOnNano.ps1
jetson-hcv-risk-poc/tests/: conftest.py  requirements.txt  test_cloud_enrichment.py  test_event_schema.py  test_gps_nmea.py  test_phase1_runtime_components.py  test_risk_engine_adapter_parity.py
scripts/: run_phase1_mock.py
services/camera-service/: README.md  pyproject.toml
services/camera-service/src/: camera_models.py  camera_reader.py  camera_service.py
services/camera-service/tests/: conftest.py  test_camera_models.py
services/cloud-api/: README.md  pyproject.toml
services/cloud-api/src/: adapter.py  client.py
services/cloud-api/tests/: conftest.py  test_adapter.py
services/dashboard/: README.md
services/gps-service/: README.md  pyproject.toml
services/gps-service/src/: gps_models.py  gps_reader.py  gps_service.py
services/gps-service/tests/: conftest.py  test_gps_models.py
services/pipeline/: README.md  pyproject.toml
services/pipeline/examples/: external_context_sample.json
services/pipeline/src/: event_pipeline.py  pipeline_runner.py
services/pipeline/tests/: conftest.py  test_pipeline_runner.py
services/risk-engine/: README.md  pyproject.toml
services/risk-engine/src/: risk_engine.py  risk_models.py  risk_rules.py
services/risk-engine/tests/: conftest.py  test_risk_rules.py
services/shared/: README.md
services/telemetry-service/: README.md
services/v2x-simulator/: README.md
(+42 files in other folders)
