[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hcv-pipeline"
version = "0.1.0"
description = "Phase 1 local orchestration for camera + GPS + risk-engine (see services/pipeline/README.md)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["event_pipeline", "pipeline_runner"]
